--- a/hw10/style.css
+++ b/hw10/style.css
@@ -5,8 +5,21 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 .conteiner{
     margin: 0 auto;
-    width: 100%;
     max-width: 1200px;
+    width: auto;
+}
+.conteiner2{
+    margin: 0 auto;
+    max-width: 550px;
+    width: auto;
+}
+.conteiner3{
+    max-width: 260px;
+    width: auto;
+}
+header{
+position: fixed;
+top:10px;
 }
 nav{
     display: flex;
@@ -87,4 +100,31 @@ nav{
 }
 .article4 p:last-child{
     margin-bottom: 90px;
+}
+aside ul li{
+    color: #000;
+    font-family: Francois One;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 48px;
+    letter-spacing: 1.44px;
+    text-transform: uppercase;
+    text-decoration:underline ;
+}
+aside{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: sticky;
+    top: 90px;
+    width: 385px;
+}
+.tools{
+    position: fixed;
+    top:100px;
+    right: 150px;
+    width: 660px;
+    height: 660px;
+    z-index: -1;
 }
