--- a/hw12/style.css
+++ b/hw12/style.css
@@ -54,7 +54,38 @@ section h1{
     align-items: center;
 }
 .content div{
+    border-radius: 8px;
+    border: 1px solid #E5EAF4;
+    background: #FFF;
     margin: 40px;
+}
+.content div:hover{
+    border-radius: 8px;
+    border: 1px solid #c4ffbb;
+    background: #FFF;
+}
+:root {
+    --color-1: #D1E7FF;
+    --color-2: #B9DCFF;
+    --color-3: #E8F3FF;
+    --color-4: #B9DCFF;
+    --color-5: #D1E7FF;
+    --color-6: #D1E7FF;
+    --color-7: #007FFC;
+}
+svg:hover{
+    stroke: #E1F4F5 ;
+    fill: #E1F4F5;
+    stroke: #CAEFF2;
+    fill: #CAEFF2;
+    stroke: #F4FEFF;
+    fill: #F4FEFF;
+    stroke: #CAEFF2;
+    fill: #CAEFF2;
+    stroke: #E1F4F5;
+    fill: #E1F4F5;
+    stroke:  #52C29D;
+    fill:  #52C29D;
 }
 .content h5{
     color: var(--6, #16133D);
@@ -89,6 +120,7 @@ footer{
 footer nav{
     display: flex;
     align-items: center;
+    padding: 40px;
 }
 footer a img{
     width: 30px;
@@ -102,4 +134,14 @@ footer h2{
     font-style: normal;
     font-weight: 500;
     line-height: 35px;
+}
+footer .icons{
+    display: flex;
+    align-items: center;
+    padding-bottom: 40px;
+}
+footer .icons svg{
+    border-radius: 2px;
+    background: var(--1, #EFEEF3);
+    margin-right: 10px;
 }
