--- a/project1/style.css
+++ b/project1/style.css
@@ -9,9 +9,10 @@
 }
 header{
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 75% 25%;
     justify-content: center;
     justify-items: start;
+    padding-bottom: 100px;
 }
 header div{
     display: grid;
@@ -22,6 +23,10 @@ header div{
 }
 header nav{
     margin-left: 120px;
+}
+header #logo{
+    max-width: 20px;
+    width: auto;
 }
 header nav a{
     color: var(--1, #4B5D68);
@@ -45,8 +50,10 @@ header a, footer nav a{
 }
 .demo-btn{
     display: flex;
-    width: 210px;
-    height: 60px;
+    max-width: 210px;
+    width: auto;
+    min-height: 60px;
+    height: auto;
     justify-content: center;
     align-items: center;
     gap: 20px;
@@ -70,8 +77,8 @@ header a, footer nav a{
     box-shadow: 0px 5px 5px 0px rgba(75, 93, 104, 0.10);
     color: #FFF;
 }
-.demo-btn:hover #demo path{
-    stroke: #FFF;
+.demo-btn:hover svg path{
+    stroke: #EAF6FC;
 }
 section h1{
     color: var(--2, #212353);
@@ -93,6 +100,8 @@ section p{
 }
 .data{
     padding-bottom: 100px;
+    max-width: 1200px;
+    width: auto;
 }
 .data p{
     max-width: 370px;
@@ -106,11 +115,13 @@ section p{
     right: 20px;
     top: 70px;
     max-width: 770px;
+    width: auto;
     z-index: -1;
 }
 .data button{
     display: flex;
-    width: 210px;
+    max-width: 210px;
+    width: auto;
     height: 60px;
     justify-content: center;
     align-items: center;
@@ -127,6 +138,7 @@ section p{
     font-weight: 500;
     line-height: 160%;
     margin-right: 20px;
+    padding: 10px 40px;
 }
 .data button:hover{
     border-radius: 50px;
@@ -171,6 +183,9 @@ section h2{
     font-weight: 400;
     line-height: 130%;
     padding-bottom: 20px;
+}
+.features{
+    padding-bottom: 100px;
 }
 .features .card p{
     max-width: 230px;
@@ -311,6 +326,9 @@ section h2{
     flex-shrink: 0;
     padding-right: 25px;
 }
+footer{
+    padding-top: 120px;
+}
 footer .sign-up, .btn{
     display: grid;
     grid-template-columns: 1fr auto;
@@ -322,7 +340,8 @@ footer .sign-up{
 }
 footer h3{
     display: flex;
-    width: 257px;
+    max-width: 257px;
+    width: auto;
     height: 44px;
     flex-direction: column;
     justify-content: center;
@@ -333,6 +352,7 @@ footer h3{
     font-style: normal;
     font-weight: 700;
     line-height: 130%;
+    margin-bottom: 20px;
 }
 footer p{
     color: var(--1, #4B5D68);
@@ -344,8 +364,10 @@ footer p{
 }
 footer .learn-btn{
     display: flex;
-    width: 210px;
-    height: 60px;
+    max-width: 210px;
+    width: auto;
+    min-height: 60px;
+    height: auto;
     justify-content: center;
     align-items: center;
     gap: 15px;
@@ -361,6 +383,7 @@ footer .learn-btn{
     font-weight: 500;
     line-height: 160%;
     margin-right: 20px;
+    padding: 10px 40px;
 }
 footer .learn-btn:hover{
     border-radius: 50px;
@@ -465,29 +488,29 @@ footer ul li a:hover{
     letter-spacing: 0.16px;
     max-width: 200px;
 }
-#ic-fc:hover circle{
+.ic-fc:hover circle{
     fill: #ffffff;
     stroke: #3B5998;
 }
-#ic-fc:hover path{
+.ic-fc:hover path{
     fill: #3B5998;
     stroke: #3B5998;
 }
-#ic-fc path:hover{
+.ic-fc path:hover{
     fill:#3B5998;
 }
-#ic-tw:hover circle{
+.ic-tw:hover circle{
     fill: #ffffff;
     stroke: #00ACEE;
 }
-#ic-tw:hover path{
+.ic-tw:hover path{
     fill: #00ACEE;
 }
-#ic-in:hover circle{
+.ic-in:hover circle{
     fill: #ffffff;
     stroke: #C13584;
 }
-#ic-in:hover path{
+.ic-in:hover path{
     fill: #C13584;
 }
 footer h6{
