--- a/project1/style.css
+++ b/project1/style.css
@@ -5,37 +5,40 @@
 .conteiner{
     margin: 0 auto;
     max-width: 1200px;
-    width: auto;
+    width: 100%;
 }
 header{
     display: grid;
-    grid-template-columns: 75% 25%;
-    justify-content: center;
-    justify-items: start;
-    padding-bottom: 100px;
+    grid-template-columns: 1fr minmax(150px, 215px);
+    align-items: center;
+    height: 100px;
 }
 header div{
     display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: center;
-    justify-content: start;
-    justify-items: start;
-}
-header nav{
-    margin-left: 120px;
+    grid-template-columns: minmax(44px,170px) 350px;
+    margin-right: auto;
 }
 header #logo{
     max-width: 20px;
-    width: auto;
+    width: 100%;
 }
-header nav a{
+header nav{
+    max-width: 350px;
+    width: 100%;
+    padding: 0 15px;
+    box-sizing: border-box;
+}
+header nav ul{
+    display: flex;
+    justify-content: space-between;
+}
+header nav ul li a{
     color: var(--1, #4B5D68);
     font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 160%;
-    margin-right: 40px ;
 }
 header nav a:last-child{
     margin-right: 0;
@@ -67,7 +70,7 @@ header a, footer nav a{
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 160%; /* 25.6px */
+    line-height: 160%;
     letter-spacing: 0.08px;
 }
 .demo-btn:hover{
@@ -88,6 +91,7 @@ section h1{
     font-weight: 700;
     line-height: 110%;
     max-width: 600px;
+    width: 100%;
     margin-bottom: 50px;
 }
 section p{
@@ -98,13 +102,21 @@ section p{
     font-weight: 500;
     line-height: 160%;
 }
+section h2 {
+    color: #212353;
+    font-family: Work Sans;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+    max-width: 500px;
+}
 .data{
     padding-bottom: 100px;
-    max-width: 1200px;
-    width: auto;
 }
 .data p{
     max-width: 370px;
+    width: 100%;
     margin-bottom: 50px;
 }
 .data{
@@ -139,21 +151,13 @@ section p{
     line-height: 160%;
     margin-right: 20px;
     padding: 10px 40px;
+    grid-area: button;
 }
 .data button:hover{
     border-radius: 50px;
     border: 1px solid #8A40EE;
     background: var(--colors-violet-middle, #8A40EE);
     box-shadow: 0px 5px 5px 0px rgba(75, 93, 104, 0.10);
-}
-section h2{
-    color: #212353;
-    font-family: Work Sans;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 130%;
-    max-width: 500px;
 }
 .we{
     display: grid;
@@ -170,10 +174,17 @@ section h2{
 }
 .we p{
     max-width: 500px;
+    width: 100%;
     margin-top: 40px;
+}
+.titleFeat{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .features p{
     max-width: 640px;
+    width: 100%;
 }
 .features .card h5{
     color: #212353;
@@ -241,13 +252,13 @@ section h2{
     justify-content: center;
     justify-items: center;
     padding-bottom: 50px;
-}
+} 
 .subtitle-ftr{
     display: grid;
     grid-template-columns: 1fr auto;
     justify-content: center;
     justify-items: center;
-}
+} 
 .title-ftr div p{
     display: flex;
     justify-content: center;
@@ -298,6 +309,7 @@ section h2{
     line-height: 130%;
     justify-content: center;
     justify-items: center;
+    margin-top: 70px;
 }
 .testimonials h5{
     color: var(--text-violet-dark, #212353);
@@ -329,11 +341,14 @@ section h2{
 footer{
     padding-top: 120px;
 }
-footer .sign-up, .btn{
+footer .btn{
+    display: flex;
+    justify-items: center;
+}
+footer .sign-up{
     display: grid;
-    grid-template-columns: 1fr auto;
-    justify-content: center;
-    justify-items: start; 
+    grid-template-columns: minmax(150px, 257px) minmax(210px, 400px);
+    justify-content: space-between;
 }
 footer .sign-up{
     padding-bottom: 100px;
@@ -341,7 +356,7 @@ footer .sign-up{
 footer h3{
     display: flex;
     max-width: 257px;
-    width: auto;
+    width: 100%;
     height: 44px;
     flex-direction: column;
     justify-content: center;
@@ -361,6 +376,9 @@ footer p{
     font-style: normal;
     font-weight: 500;
     line-height: 160%;
+}
+footer .sign-up p{
+    width: 370px;
 }
 footer .learn-btn{
     display: flex;
@@ -382,8 +400,11 @@ footer .learn-btn{
     font-style: normal;
     font-weight: 500;
     line-height: 160%;
-    margin-right: 20px;
+    margin-right: 30px;
     padding: 10px 40px;
+}
+.dataWafle{
+    padding-bottom: 40px;
 }
 footer .learn-btn:hover{
     border-radius: 50px;
@@ -393,16 +414,15 @@ footer .learn-btn:hover{
 }
 footer nav{
     display: grid;
-    grid-template-columns:1fr 700px;
+    grid-template-columns:minmax(160px, 300px) minmax(170px, 500px);
     justify-content: center;
-    justify-items: stretch; 
+    justify-content: space-between;
 }
 footer nav .links{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    justify-content: center;
-    justify-items: start; 
+    grid-template-columns: minmax(80px, 160px) minmax(70px, 140px) minmax(180px, 340px);
     justify-content: space-between;
+    gap: 40px;
 }
 footer .info{
     display: grid;
@@ -477,6 +497,7 @@ footer ul li a:hover{
     line-height: 180%;
     letter-spacing: 0.16px;
     max-width: 275px;
+    width: 100%;
 }
 .contacts a{
     color: var(--2, #212353);
@@ -522,5 +543,91 @@ footer h6{
     line-height: 180%;
     letter-spacing: 0.12px;
     margin-top: 100px;
+    max-width: 300px;
+    width: 100%;
 }
+@media (max-width: 800px) {
+    footer nav {
+        grid-template-areas: "data data data"
+            "nav  nav  nav";
+    }
+    .dataWafle {
+        grid-area: data;
+    }
+    footer .links {
+        grid-area: nav;
+    }
+}
+@media (max-width: 1030px) {
+    .data {
+        grid-template-areas: "title textp"
+            " img img"
+            "button";
+    }
 
+    .data h1 {
+        grid-area: title;
+        margin-bottom: 15px;
+        padding-left: 50px;
+    }
+
+    .data p {
+        grid-area: textp;
+        margin-bottom: 0;
+        padding-left: 50px;
+    }
+
+    .data img {
+        grid-area: img;
+        position: relative;
+        margin-bottom: 80px;
+    }
+
+    .data button {
+        grid-area: button;
+    }
+}
+@media (max-width:900px) {
+    .we {
+        grid-template-columns: 1fr;
+        border-radius: 50px;
+        background: var(--colors-pink-medium, #FDE8F5);
+        padding:0 400px 100px 0px;
+    }
+    .we img{
+        padding-left: 100px;
+    }
+    .we h2{
+    padding-left: 200px;
+    }
+    .we p{
+        padding-left: 200px;
+    }
+
+}
+@media (max-width:1200px) {
+    .cards {
+        grid-template-columns: 1fr;
+    }
+    .card{
+        margin-left: 150px;
+    }
+    .card:nth-child(3) {
+        margin-bottom: 50px
+    }
+    .subtitle-ftr{
+        padding-left: 80px
+    }
+    ;
+}
+@media (max-width:950px) {
+    .persons {
+        grid-template-columns: 1fr;
+    }
+    .testimonials{
+        padding-left: 40px;
+    }
+    .persons .person {
+        margin: 25px 0 0 50px ;
+    }
+}
